# Magi-Bot

./: .breakpoints  .replit  README.md  gifs.json  keep_alive.py  level_progression.json  main.py  messages.json  pyproject.toml  replit.nix  scraped_data.txt  scraped_data_71319.txt  scraped_data_77238.txt  to-do.txt
classes/: AdvCombatView.py  CombatView.py  Combat_Entity.py  DungeonCombatView.py  Enemy.py  MultiplayerCombatView.py  Player.py  SlashAdvCombatView.py  TutorialView.py
commands/: (slash) adventure.py  (slash) heal.py  (slash) suggest.py  NEWprofile_settings.py  OLDhunt.py  OLDuse.py  achievements.py  admin.py  adventure.py  area.py  bug.py  buy.py  cat.py  changelog.py  cooldowns.py  daily.py  dog.py  dungeon.py  floor.py  gemshop.py  get_title.py  heal.py  help.py  hi.py  hunt.py  img_profile.py  inventory.py  leaderboard.py  new_hunt.py  profile.py  profile_settings.py  recipes.py  replicateAIcmd (backup).py  replicateAIcmd.py  sell.py  shop.py  skill.py  status.py  suggest.py  template.py  (+3 more)
functions/: check_inventory.py  combat.py  cooldown_manager.py  get_achievement.py  item_write.py  load_settings.py  settings_manager.py  xp_handling.py
website/: 404.html  error404.html  index.html  leaderboard.html  oldindex.html  profile-error.html  profile.html
website/static/: 404.css  error404.css  index.css  leaderboard.css  package.json  profile-error.css  profile.css  style.css
